--- a/fundamentos/bloco-3-introdução-HTML-CSS/dia-4-HTMLsemantico/exercício1/index.html
+++ b/fundamentos/bloco-3-introdução-HTML-CSS/dia-4-HTMLsemantico/exercício1/index.html
@@ -15,12 +15,12 @@
     </header>
 
     <nav>
-        <a href="">Página inicial</a>
-        <a href="">Sobre</a>
-        <a href="">Contato</a>
+        <a href="#Pginicial">Página inicial</a>
+        <a href="#references">Sobre</a>
+        <a href="#author">Contato</a>
     </nav>
     <main>
-        <article class="textnVideo">
+        <article id="Pginicial" class="textnVideo">
             <h2>Fatos sobre o Stomatopoda </h2>
             <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito
                 apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma
@@ -65,11 +65,11 @@
                 <strong>lacraias-do-mar</strong> no Brasil.</p>
             <img src="NomePopular.png" alt="Imagem do corpo">
         </article>
-        <article>
+        <article id="references">
             <h2>Referêcias bibliográficas</h2>
             <a href="http://127.0.0.1:5500/index.html" target="_blank">Weekpedia</a>
         </article>
-        <footer>
+        <footer id="author">
             Conteudo compilado por Eduardo Simões, 2022
         </footer>
 
