correção da label

--- a/fundamentos/bloco-6-HTML-e-CSS-Forms-Flexbox-Responsivo/aula1-HTML-e-CSS-Forms/fixação1/index.html
+++ b/fundamentos/bloco-6-HTML-e-CSS-Forms-Flexbox-Responsivo/aula1-HTML-e-CSS-Forms/fixação1/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <label for="email">Insert your e-mail here</label>
+    <label for="email">Insert your e-mail here
     <input type="email" name="email" id="email" required autocomplete="off" autofocus>
+</label>
     <br> <br>
-    <label for="password">Insert here your password</label>
+    <label for="password">Insert here your password
     <input type="password" name="password" id="password" required>
+</label>
     <br>
     <input type="checkbox" name="remeber">Lembre-me
     <br>
