--- a/fundamentos/bloco-6-HTML-e-CSS-Forms-Flexbox-Responsivo/aula1-HTML-e-CSS-Forms/exercício/form.html
+++ b/fundamentos/bloco-6-HTML-e-CSS-Forms-Flexbox-Responsivo/aula1-HTML-e-CSS-Forms/exercício/form.html
@@ -47,7 +47,12 @@
             <input type="checkbox" id="publicity" required>Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.
         </label>
         <br><br>
+        <label for="image">Insira sua foto de perfil: <br>
+            <input type="file" id="image" required>
+        </label>
+        <br><br>
         <button type="submit" id="sendButton">Enviar!</button>
+        <br><br>
     </form>
     <script src="script.js"></script>
 </body>
